# - make one entry per person
# - group logical changes together
# - separate logically distinct changes (change sets) by a single blank line
# - entries should be brief
# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $Revision: 1.14 $ $Date: 2007-07-30 23:08:49 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2007-07-30  Christian Heller  <christian.heller@tuxtax.de>

        * Adapt all example applications to property name changes
        * Fix forgotten casts of parameters handed over to "receive_file_system", in function "receive_message"
        * Fix forgotten model allocation in workaround section of function "parse_compound_cybol_node"
        * Split function "parse_compound_cybol_properties" by extracting loop body
        * Split function "parse_compound_cybol_nodes" by extracting loop body

2007-07-27  Christian Heller  <christian.heller@tuxtax.de>

        * Clean up and correct "receive_file_system" function
        * Put loop body of "parse_compound_cybol_node" into extra function
        * Put loop body of "handle_compound" into extra function "handle_compound_part"

2007-07-23  Christian Heller  <christian.heller@tuxtax.de>

        * Adapt applicator/create.c function
        * Move some constants from globals/constants/cybol/cybol_abstraction_constants.c
            to globals/constants/memory_structure/array_constants.c and globals/constants/memory_structure/memory_abstraction_constants.c
        * Add "memoriser/mapper/abstraction_mapper.c"
        * Change "receive_file_system_model" into "parse" function, in compound_converter.c
        * Delete xml_converter.c, translator.c, cybol_translator.c, xdt_translator.c
        * Merge cybol_translator.c into compound_converter.c
        * Merge xml_converter.c into compound_converter.c