@@ -20,7 +20,7 @@
  * http://www.cybop.net
  * - Cybernetics Oriented Programming -
  *
- * @version $Revision: 1.6 $ $Date: 2007-07-23 23:47:58 $ $Author: christian $
+ * @version $Revision: 1.7 $ $Date: 2007-07-31 15:16:58 $ $Author: christian $
  * @author Christian Heller <christian.heller@tuxtax.de>
  * @author Rolf Holzmueller <rolf.holzmueller@gmx.de>
  */
@@ -533,12 +533,6 @@ static int* SEND_URL_NAME_COUNT = NUMBER_3_INTEGER_ARRAY;
 // Receive names.
 //
 
-/** The receive name name. */
-/*??
-static char RECEIVE_NAME_NAME_ARRAY[] = {'n', 'a', 'm', 'e'};
-static char* RECEIVE_NAME_NAME = RECEIVE_NAME_NAME_ARRAY;
-static int* RECEIVE_NAME_NAME_COUNT = NUMBER_4_INTEGER_ARRAY;
-
 /** The receive channel name. */
 static char RECEIVE_CHANNEL_NAME_ARRAY[] = {'c', 'h', 'a', 'n', 'n', 'e', 'l'};
 static char* RECEIVE_CHANNEL_NAME = RECEIVE_CHANNEL_NAME_ARRAY;
@@ -554,28 +548,15 @@ static char RECEIVE_MESSAGE_NAME_ARRAY[] = {'m', 'e', 's', 's', 'a', 'g', 'e'};
 static char* RECEIVE_MESSAGE_NAME = RECEIVE_MESSAGE_NAME_ARRAY;
 static int* RECEIVE_MESSAGE_NAME_COUNT = NUMBER_7_INTEGER_ARRAY;
 
+/** The receive meta name. */
+static char RECEIVE_META_NAME_ARRAY[] = {'m', 'e', 't', 'a'};
+static char* RECEIVE_META_NAME = RECEIVE_META_NAME_ARRAY;
+static int* RECEIVE_META_NAME_COUNT = NUMBER_4_INTEGER_ARRAY;
+
 /** The receive model name. */
 static char RECEIVE_MODEL_NAME_ARRAY[] = {'m', 'o', 'd', 'e', 'l'};
 static char* RECEIVE_MODEL_NAME = RECEIVE_MODEL_NAME_ARRAY;
 static int* RECEIVE_MODEL_NAME_COUNT = NUMBER_5_INTEGER_ARRAY;
-
-/** The receive details name. */
-/*??
-static char RECEIVE_DETAILS_NAME_ARRAY[] = {'d', 'e', 't', 'a', 'i', 'l', 's'};
-static char* RECEIVE_DETAILS_NAME = RECEIVE_DETAILS_NAME_ARRAY;
-static int* RECEIVE_DETAILS_NAME_COUNT = NUMBER_7_INTEGER_ARRAY;
-
-/** The receive element name. */
-/*??
-static char RECEIVE_ELEMENT_NAME_ARRAY[] = {'e', 'l', 'e', 'm', 'e', 'n', 't'};
-static char* RECEIVE_ELEMENT_NAME = RECEIVE_ELEMENT_NAME_ARRAY;
-static int* RECEIVE_ELEMENT_NAME_COUNT = NUMBER_7_INTEGER_ARRAY;
-
-/** The receive whole name. */
-/*??
-static char RECEIVE_WHOLE_NAME_ARRAY[] = {'w', 'h', 'o', 'l', 'e'};
-static char* RECEIVE_WHOLE_NAME = RECEIVE_WHOLE_NAME_ARRAY;
-static int* RECEIVE_WHOLE_NAME_COUNT = NUMBER_5_INTEGER_ARRAY;
 
 /** The receive root name. */
 static char RECEIVE_ROOT_NAME_ARRAY[] = {'r', 'o', 'o', 't'};
